--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
 								</th>
 								<th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-0">
 									<span class="sr-only">
-										Mark as done
+										Complete/Undo
 									</span>
 									<span class="sr-only">
 										Remove
